# awsome-llm-models-pg

./: README.md
ir/embeddings/snowflake-artic-2.0/: pyproject.toml
ir/embeddings/snowflake-artic-2.0/notebooks/: artic-embed-2.0.ipynb
ir/lightining-ir/: demo-notebook.ipynb  pyproject.toml
otr/: README.MD  pyproject.toml
otr/src/: otr.py
speech/tts-hexgrad-Kokoro-TTS/: pyproject.toml  tts-kokoro-demo.ipynb
