[project]
name = "kokoro-tts"
version = "0.1.0"
description = "Kokoro TTS Demo"
authors = [
    {name = "Jaganadh Gopinadhan",email = "jaganadhg@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "phonemizer (>=3.3.0,<4.0.0)",
    "transformers (>=4.48.0,<5.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "munch (>=4.0.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
