[project]
name = "artic-embed"
version = "0.1.0"
description = "Snowflake Artic Embed Experiment"
authors = [
    {name = "Jaganadh Gopinadhan",email = "jaganadhg@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (==2.0.1+cu118)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "transformers (>=4.48.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "torch"}
